// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimeInput /> 12h matches the snapshot 1`] = `
<WithStyles(TimeInput)
  defaultValue={2017-10-15T13:37:00.000Z}
  mode="12h"
>
  <TimeInput
    autoOk={false}
    cancelLabel="Cancel"
    classes={
      Object {
        "body": "TimeInput-body-2",
        "header": "TimeInput-header-1",
      }
    }
    defaultValue={2017-10-15T13:37:00.000Z}
    mode="12h"
    okLabel="Ok"
  >
    <WithStyles(Input)
      disabled={false}
      key="TimeInput-input"
      onClick={[Function]}
      readOnly={true}
      value="1:37 pm"
    >
      <Input
        classes={
          Object {
            "disabled": "MuiInput-disabled-8",
            "error": "MuiInput-error-6",
            "focused": "MuiInput-focused-7",
            "formControl": "MuiInput-formControl-4",
            "fullWidth": "MuiInput-fullWidth-11",
            "inkbar": "MuiInput-inkbar-5",
            "input": "MuiInput-input-12",
            "inputDense": "MuiInput-inputDense-13",
            "inputDisabled": "MuiInput-inputDisabled-14",
            "inputMultiline": "MuiInput-inputMultiline-16",
            "inputSearch": "MuiInput-inputSearch-17",
            "inputSingleline": "MuiInput-inputSingleline-15",
            "multiline": "MuiInput-multiline-10",
            "root": "MuiInput-root-3",
            "underline": "MuiInput-underline-9",
          }
        }
        disableUnderline={false}
        disabled={false}
        fullWidth={false}
        multiline={false}
        onClick={[Function]}
        readOnly={true}
        type="text"
        value="1:37 pm"
      >
        <div
          className="MuiInput-root-3 MuiInput-inkbar-5 MuiInput-underline-9"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-12 MuiInput-inputSingleline-15"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={true}
            required={undefined}
            rows={undefined}
            type="text"
            value="1:37 pm"
          />
        </div>
      </Input>
    </WithStyles(Input)>
    <WithStyles(Dialog)
      key="TimeInput-dialog"
      maxWidth="xs"
      onRequestClose={[Function]}
      open={false}
    >
      <Dialog
        classes={
          Object {
            "fullScreen": "MuiDialog-fullScreen-24",
            "fullWidth": "MuiDialog-fullWidth-23",
            "paper": "MuiDialog-paper-19",
            "paperWidthMd": "MuiDialog-paperWidthMd-22",
            "paperWidthSm": "MuiDialog-paperWidthSm-21",
            "paperWidthXs": "MuiDialog-paperWidthXs-20",
            "root": "MuiDialog-root-18",
          }
        }
        disableBackdropClick={false}
        disableEscapeKeyDown={false}
        fullScreen={false}
        fullWidth={false}
        maxWidth="xs"
        onRequestClose={[Function]}
        open={false}
        transition={[Function]}
        transitionDuration={
          Object {
            "enter": 225,
            "exit": 195,
          }
        }
      >
        <WithStyles(Modal)
          BackdropProps={
            Object {
              "transitionDuration": Object {
                "enter": 225,
                "exit": 195,
              },
            }
          }
          className="MuiDialog-root-18"
          disableBackdropClick={false}
          disableEscapeKeyDown={false}
          onBackdropClick={undefined}
          onClose={undefined}
          onEscapeKeyDown={undefined}
          onRequestClose={[Function]}
          open={false}
          role="dialog"
        >
          <Modal
            BackdropComponent={[Function]}
            BackdropProps={
              Object {
                "transitionDuration": Object {
                  "enter": 225,
                  "exit": 195,
                },
              }
            }
            className="MuiDialog-root-18"
            classes={
              Object {
                "hidden": "MuiModal-hidden-26",
                "root": "MuiModal-root-25",
              }
            }
            disableAutoFocus={false}
            disableBackdropClick={false}
            disableEnforceFocus={false}
            disableEscapeKeyDown={false}
            disableRestoreFocus={false}
            hideBackdrop={false}
            keepMounted={false}
            manager={
              ModalManager {
                "add": [Function],
                "containers": Array [],
                "data": Array [],
                "handleContainerOverflow": true,
                "hideSiblingNodes": true,
                "isTopModal": [Function],
                "modals": Array [],
                "remove": [Function],
              }
            }
            onBackdropClick={undefined}
            onClose={undefined}
            onEscapeKeyDown={undefined}
            onRequestClose={[Function]}
            open={false}
            role="dialog"
          />
        </WithStyles(Modal)>
      </Dialog>
    </WithStyles(Dialog)>
  </TimeInput>
</WithStyles(TimeInput)>
`;

exports[`<TimeInput /> 24h matches the snapshot 1`] = `
<WithStyles(TimeInput)
  defaultValue={2017-10-15T13:37:00.000Z}
  mode="24h"
>
  <TimeInput
    autoOk={false}
    cancelLabel="Cancel"
    classes={
      Object {
        "body": "TimeInput-body-2",
        "header": "TimeInput-header-1",
      }
    }
    defaultValue={2017-10-15T13:37:00.000Z}
    mode="24h"
    okLabel="Ok"
  >
    <WithStyles(Input)
      disabled={false}
      key="TimeInput-input"
      onClick={[Function]}
      readOnly={true}
      value="13:37"
    >
      <Input
        classes={
          Object {
            "disabled": "MuiInput-disabled-8",
            "error": "MuiInput-error-6",
            "focused": "MuiInput-focused-7",
            "formControl": "MuiInput-formControl-4",
            "fullWidth": "MuiInput-fullWidth-11",
            "inkbar": "MuiInput-inkbar-5",
            "input": "MuiInput-input-12",
            "inputDense": "MuiInput-inputDense-13",
            "inputDisabled": "MuiInput-inputDisabled-14",
            "inputMultiline": "MuiInput-inputMultiline-16",
            "inputSearch": "MuiInput-inputSearch-17",
            "inputSingleline": "MuiInput-inputSingleline-15",
            "multiline": "MuiInput-multiline-10",
            "root": "MuiInput-root-3",
            "underline": "MuiInput-underline-9",
          }
        }
        disableUnderline={false}
        disabled={false}
        fullWidth={false}
        multiline={false}
        onClick={[Function]}
        readOnly={true}
        type="text"
        value="13:37"
      >
        <div
          className="MuiInput-root-3 MuiInput-inkbar-5 MuiInput-underline-9"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          <input
            aria-invalid={undefined}
            aria-required={undefined}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-12 MuiInput-inputSingleline-15"
            defaultValue={undefined}
            disabled={false}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={true}
            required={undefined}
            rows={undefined}
            type="text"
            value="13:37"
          />
        </div>
      </Input>
    </WithStyles(Input)>
    <WithStyles(Dialog)
      key="TimeInput-dialog"
      maxWidth="xs"
      onRequestClose={[Function]}
      open={false}
    >
      <Dialog
        classes={
          Object {
            "fullScreen": "MuiDialog-fullScreen-24",
            "fullWidth": "MuiDialog-fullWidth-23",
            "paper": "MuiDialog-paper-19",
            "paperWidthMd": "MuiDialog-paperWidthMd-22",
            "paperWidthSm": "MuiDialog-paperWidthSm-21",
            "paperWidthXs": "MuiDialog-paperWidthXs-20",
            "root": "MuiDialog-root-18",
          }
        }
        disableBackdropClick={false}
        disableEscapeKeyDown={false}
        fullScreen={false}
        fullWidth={false}
        maxWidth="xs"
        onRequestClose={[Function]}
        open={false}
        transition={[Function]}
        transitionDuration={
          Object {
            "enter": 225,
            "exit": 195,
          }
        }
      >
        <WithStyles(Modal)
          BackdropProps={
            Object {
              "transitionDuration": Object {
                "enter": 225,
                "exit": 195,
              },
            }
          }
          className="MuiDialog-root-18"
          disableBackdropClick={false}
          disableEscapeKeyDown={false}
          onBackdropClick={undefined}
          onClose={undefined}
          onEscapeKeyDown={undefined}
          onRequestClose={[Function]}
          open={false}
          role="dialog"
        >
          <Modal
            BackdropComponent={[Function]}
            BackdropProps={
              Object {
                "transitionDuration": Object {
                  "enter": 225,
                  "exit": 195,
                },
              }
            }
            className="MuiDialog-root-18"
            classes={
              Object {
                "hidden": "MuiModal-hidden-26",
                "root": "MuiModal-root-25",
              }
            }
            disableAutoFocus={false}
            disableBackdropClick={false}
            disableEnforceFocus={false}
            disableEscapeKeyDown={false}
            disableRestoreFocus={false}
            hideBackdrop={false}
            keepMounted={false}
            manager={
              ModalManager {
                "add": [Function],
                "containers": Array [],
                "data": Array [],
                "handleContainerOverflow": true,
                "hideSiblingNodes": true,
                "isTopModal": [Function],
                "modals": Array [],
                "remove": [Function],
              }
            }
            onBackdropClick={undefined}
            onClose={undefined}
            onEscapeKeyDown={undefined}
            onRequestClose={[Function]}
            open={false}
            role="dialog"
          />
        </WithStyles(Modal)>
      </Dialog>
    </WithStyles(Dialog)>
  </TimeInput>
</WithStyles(TimeInput)>
`;
